logs/dag_id=weather_dag_api/run_id=manual__2023-04-26T18:49:41.093089+00:00/task_id=cities.insert_data_Odesa/attempt=1.log
[2023-04-26T18:50:21.926+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Odesa manual__2023-04-26T18:49:41.093089+00:00 [queued]>
[2023-04-26T18:50:22.054+0000] {taskinstance.py:1090} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_dag_api.cities.insert_data_Odesa manual__2023-04-26T18:49:41.093089+00:00 [queued]>
[2023-04-26T18:50:22.057+0000] {taskinstance.py:1288} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T18:50:22.058+0000] {taskinstance.py:1289} INFO - Starting attempt 1 of 1
[2023-04-26T18:50:22.060+0000] {taskinstance.py:1290} INFO - 
--------------------------------------------------------------------------------
[2023-04-26T18:50:22.284+0000] {taskinstance.py:1309} INFO - Executing <Task(PostgresOperator): cities.insert_data_Odesa> on 2023-04-26 18:49:41.093089+00:00
[2023-04-26T18:50:22.376+0000] {standard_task_runner.py:55} INFO - Started process 2207 to run task
[2023-04-26T18:50:22.400+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather_dag_api', 'cities.insert_data_Odesa', 'manual__2023-04-26T18:49:41.093089+00:00', '--job-id', '415', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag_api.py', '--cfg-path', '/tmp/tmp3wtxbbiz']
[2023-04-26T18:50:22.416+0000] {standard_task_runner.py:83} INFO - Job 415: Subtask cities.insert_data_Odesa
[2023-04-26T18:50:23.170+0000] {task_command.py:389} INFO - Running <TaskInstance: weather_dag_api.cities.insert_data_Odesa manual__2023-04-26T18:49:41.093089+00:00 [running]> on host b46a99c748bd
[2023-04-26T18:50:23.645+0000] {taskinstance.py:1518} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=weather_dag_api
AIRFLOW_CTX_TASK_ID=cities.insert_data_Odesa
AIRFLOW_CTX_EXECUTION_DATE=2023-04-26T18:49:41.093089+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-04-26T18:49:41.093089+00:00
[2023-04-26T18:50:23.656+0000] {sql.py:254} INFO - Executing: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull('cities.process_data_Odesa'[1])})
[2023-04-26T18:50:23.684+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T18:50:25.696+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-04-26T18:50:25.705+0000] {sql.py:375} INFO - Running statement: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull('cities.process_data_Odesa'[1])}), parameters: None
[2023-04-26T18:50:25.714+0000] {taskinstance.py:1776} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 1: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull('citie...
                                                ^

[2023-04-26T18:50:25.754+0000] {taskinstance.py:1332} INFO - Marking task as FAILED. dag_id=weather_dag_api, task_id=cities.insert_data_Odesa, execution_date=20230426T184941, start_date=20230426T185021, end_date=20230426T185025
[2023-04-26T18:50:25.804+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 415 for task cities.insert_data_Odesa (syntax error at or near "{"
LINE 1: INSERT INTO measurements (temp) VALUES ({ti.xcom_pull('citie...
                                                ^
; 2207)
[2023-04-26T18:50:25.910+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-04-26T18:50:26.055+0000] {taskinstance.py:2596} INFO - 0 downstream tasks scheduled from follow-on schedule check
